# void

./: CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/app/: actions.rs  events.rs  mod.rs  state.rs
src/config/: defaults.rs  mod.rs
src/input/: mod.rs
src/lyrics/: lrclib.rs  mod.rs  parser.rs
src/player/: mpv.rs
src/queue/: mod.rs
src/storage/: mod.rs
src/tui/: mod.rs
src/tui/theme/: borders.rs  icons.rs  mod.rs  palette.rs
src/tui/widgets/: help.rs  mod.rs  now_playing.rs  queue.rs  root.rs  settings.rs  sidebar.rs  track_list.rs
src/ytm/: api.rs  auth.rs  mod.rs  models.rs  resolve.rs
