[package]
name = "void"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
hex = "0.4.3"
lru = "0.16.3"
once_cell = "1.21.3"
rand = "0.9"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json"] }
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.10.6"
time = "0.3.45"
tokio = { version = "1.49.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
urlencoding = "2.1"